--- a/templates/base.html
+++ b/templates/base.html
@@ -558,6 +558,25 @@
                                 <span class="d-inline d-lg-none">Config</span>
                             </a>
                         </li>
+                        
+                        <!-- Séparateur -->
+                        <li class="nav-item mt-3">
+                            <hr class="my-2">
+                        </li>
+                        
+                        <!-- Bouton de déconnexion -->
+                        <li class="nav-item">
+                            <form method="post" action="{% url 'utilisateurs:logout_groupe' %}" class="d-inline w-100">
+                                {% csrf_token %}
+                                <button type="submit" class="nav-link btn btn-link text-start w-100 border-0 bg-transparent p-2" 
+                                        style="color: #dc3545 !important; font-weight: 500;"
+                                        onclick="return confirm('Êtes-vous sûr de vouloir vous déconnecter ?')">
+                                    <i class="bi bi-box-arrow-right me-2"></i>
+                                    <span class="d-none d-lg-inline">Déconnexion</span>
+                                    <span class="d-inline d-lg-none">Déco</span>
+                                </button>
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </nav>
