--- a/templates/paiements/partial_payment/creer_plan.html
+++ b/templates/paiements/partial_payment/creer_plan.html
@@ -340,7 +340,7 @@
 
                     <!-- Actions -->
                     <div class="form-actions">
-                        <a href="{% url 'paiements_partiels:liste_plans' %}" class="btn-cancel">
+                        <a href="{% url 'paiements:liste_plans_partiels' %}" class="btn-cancel">
                             <i class="fas fa-times me-2"></i>Annuler
                         </a>
                         <button type="submit" class="btn-submit" id="submitBtn">
